<resources>
    <string name="app_name">Milestone</string>
    <string name="login_welcome">Log In With Your Account</string>
    <string name="create_an_account">Create an Account</string>
    <string name="enter_your_credentials_for_login">Enter Your Credentials for LogIn</string>
    <string name="collaborate_with_your_friends_today">Collaborate with your friends today!</string>
    <string name="head_email">Email:</string>
    <string name="email">Email</string>
    <string name="head_password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>

    <string name="open_nav">Open Navigation</string>
    <string name="close_nav">Close Navigation</string>
    <string name="add_project">Add Project</string>
    <string name="title">Title</string>
    <string name="collaborators">Collaborators:</string>

    <string name="add_collaborators">Add Collaborators</string>
    <string name="add">Add</string>
    <string name="enter_a_project_title">Enter a project title</string>
    <string name="back_button">Back Button</string>
    <string name="add_task">Add Task</string>
    <string name="to_do">To Do:</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="create_task">Create Task</string>
    <string name="enter_task_name">Enter task name</string>

    <string name="select_status">Urgency</string>
    <string name="create_project">Create Project</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="submit">Submit</string>
    <string name="milestone_app_logo">Milestone App Logo</string>
    <string name="this_application_was_developed_as_part_of_a_capstone_project_for_sti_college_balayan_demonstrating_practical_expertise_in_mobile_application_development_and_cloud_integration">This application was developed as part of a capstone project for STI College Balayan, demonstrating practical expertise in mobile application development and cloud integration.</string>
    <string name="version_9_8_3">Version 9.8.3</string>
    <string name="about_the_developer">About the Developer</string>
    <string name="milestone_frog_mascot">Milestone Frog Mascot</string>
    <string name="milestone_is_a_mobile_app_designed_for_senior_high_school_it_students_that_uses_gamification_to_help_them_manage_tasks_and_reduce_procrastination_a_virtual_frog_grows_as_users_complete_goals_promoting_better_time_management_and_productivity_the_app_aims_to_empower_users_to_work_smarter_by_combining_technology_and_motivation_becoming_a_leading_productivity_tool_that_fosters_better_habits_and_task_management_while_providing_a_fun_and_engaging_experience">Milestone is a mobile app designed for Senior High School IT students that uses gamification to help them manage tasks and reduce procrastination. A virtual frog grows as users complete goals, promoting better time management and productivity. The app aims to empower users to work smarter by combining technology and motivation, becoming a leading productivity tool that fosters better habits and task management while providing a fun and engaging experience.</string>
    <string name="purpose_and_vision">Purpose and Vision</string>
    <string name="the_milestone_focuses_on_implementing_a_task_management_system_within_the_milestone_app_enabling_users_to_create_view_and_organize_tasks_across_three_stages_to_do_in_progress_and_completed_it_includes_integrating_firestore_to_store_and_retrieve_task_data_designing_a_user_interface_with_multiple_recyclerviews_and_adding_drag_and_drop_functionality_to_move_tasks_between_stages_the_goal_is_to_provide_a_seamless_and_interactive_way_for_users_to_manage_their_project_tasks_with_real_time_updates_reflected_in_the_firestore_database">The milestone focuses on implementing a task management system within the Milestone app, enabling users to create, view, and organize tasks across three stages: To Do, In Progress, and Completed. It includes integrating Firestore to store and retrieve task data, designing a user interface with multiple RecyclerViews, and adding drag-and-drop functionality to move tasks between stages. The goal is to provide a seamless and interactive way for users to manage their project tasks, with real-time updates reflected in the Firestore database.</string>
    <string name="about_milestone">About Milestone</string>
    <string name="milestone">Milestone</string>
    <string name="task_completed">Task Completed!</string>
    <string name="would_you_like_to_attach_files_to_this_task">Would you like to attach files to this task?</string>
    <string name="skip">Skip</string>
    <string name="send_files">Send Files</string>
</resources>