<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/Light_Yellow"
    android:orientation="vertical"
    tools:context=".fragments.AddProjectFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="16sp"
        android:textColor="@color/Black"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/projectTitleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="15"
            android:hint="@string/enter_a_project_title"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/collaborators"
            android:textColor="@color/Black"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>

        <ImageButton
            android:id="@+id/openAddDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:src="@drawable/baseline_add_24"
            android:contentDescription="@string/collaborators" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/UserProfiles"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/addprojectItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_project" />

</LinearLayout>